# stockQuant

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
docs/: SWHY2021_industry_codes.md  alpha191_extracted.txt  alpha191_replication.md  guoren.md
notebooks/: dual_ma_backtest.ipynb
notebooks/alpha101/: alpha001_backtest.ipynb  alpha101_hs300_backtest.ipynb  alpha101_single_stock.ipynb
notebooks/alpha191/: _benchmark_full.py  _download_data.py  _profile_performance.py  _run_notebook.py  (+7 more)
scripts/: run_alpha101.py
stockquant/: __init__.py
tests/: test_alpha101.py  test_alpha191.py  test_alpha_researcher.py  test_backtest.py  test_backtest_benchmark.py  test_data_cleaner.py  test_evaluator.py  test_helpers.py  test_hs300_daily.py  test_performance.py  test_regime_detector.py  test_registry.py  test_risk.py  test_signals_announcement.py  test_signals_block_trade.py  test_signals_concept.py  test_signals_dividend.py  test_signals_dragon_tiger.py  test_signals_eastmoney.py  test_signals_finance.py  test_signals_fund_flow.py  test_signals_holders.py  test_signals_hot.py  test_signals_industry.py  test_signals_infra_phase4.py  test_signals_iwencai.py  test_signals_limit_up.py  test_signals_lockup.py  test_signals_margin.py  test_signals_news.py  test_signals_northbound.py  test_signals_options.py  test_signals_quote.py  test_signals_research.py  test_signals_sentiment.py  test_signals_valuation.py  test_source_akshare.py  test_source_baostock.py  test_universe.py  test_updater.py
(+115 files in other folders)
