[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockquant"
version = "0.1.0"
description = "基于 Python 的 A 股量化交易框架"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.4.0b",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0", "lightgbm>=4.0.0"]
web = ["streamlit>=1.30.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
all = ["stockquant[ml,web,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["stockquant*"]
